static/css/my-songs.css
/*
File: my-songs.css
Author: Maurice Vossen
Date: November 2021
*/


.my-songs-div { 
    box-sizing: border-box;
    font-size: 18px;
    overflow: hidden;
    text-decoration: none;
    background-color: var(--black);
    width: 50%;
    margin: 0 auto;
    padding: 30px;
    border: 2px solid var(--yellow);
    border-radius: 20px;
    margin-bottom: 20px;
}


.my-songs-item {
    color: var(--white);
    cursor: pointer;
    box-sizing: border-box;
    float: left;
    width: calc(100% - 200px);
    border-radius: 8px;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    padding: 10px 0;
}


.my-songs-item > a {
    color: var(--white);
    text-decoration: none;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}


.my-songs-item > a:hover {
    color: var(--pink);
    text-decoration: underline;
}


/* media queries for my-songs.html only */
/* for tablets and phones */

@media only screen and (max-width: 700px) { 

    .my-songs-div {
        width: 100% !important;
        border-radius: 0;
        border: 0;
        margin: 0 !important;
    }

}


@media only screen and (max-width: 1400px) { 

    .my-songs-div {
        width: 70%;
    }

}

